# faceit

./: Cargo.toml  README.md
examples/: basic_usage.rs  ergonomic_api.rs
scripts/: validate-version.sh
src/: lib.rs  types.rs
src/http/: client.rs  mod.rs
src/http/ergonomic/: championship.rs  game.rs  hub.rs  match.rs  mod.rs  player.rs
